--- a/src/ShuppanButsu/packages.config
+++ b/src/ShuppanButsu/packages.config
@@ -5,4 +5,5 @@
   <package id="fasterflect" version="2.1.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net45" />
 </packages>
