--- a/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
+++ b/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\AggregateRootFixture.cs" />
     <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\FileSystemEventsStoreBasicFunctionalitiesFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
