--- a/src/ShuppanButsu/ShuppanButsu.csproj
+++ b/src/ShuppanButsu/ShuppanButsu.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventsStore.cs" />
     <Compile Include="Infrastructure\DomainEvent.cs" />
     <Compile Include="Infrastructure\IEventsStore.cs" />
+    <Compile Include="Infrastructure\Concrete\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
