--- a/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
+++ b/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
@@ -30,6 +30,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle.Core.3.1.0\lib\net35\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle.Windsor.3.1.0\lib\net40\Castle.Windsor.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\..\libs\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="SharpTestsEx">
       <HintPath>..\..\libs\SharpTestsEx.1.1.1\lib\SharpTestsEx.dll</HintPath>
     </Reference>
@@ -50,9 +61,19 @@
   <ItemGroup>
     <Compile Include="Domain\AggregateRootFixture.cs" />
     <Compile Include="Domain\TestClasses\TestClassesBasic.cs" />
+    <Compile Include="Infrastructure\Concrete\CastleFasterflectCatalogFixture.cs" />
     <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\FileSystemEventsStoreBasicFunctionalitiesFixture.cs" />
     <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\RepositoryFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\AutoMock\AutoMockingContainer.cs" />
+    <Compile Include="Utils\AutoMock\AutoMockingDependencyResolver.cs" />
+    <Compile Include="Utils\AutoMock\AutoMockingFacility.cs" />
+    <Compile Include="Utils\AutoMock\IAutoMockingRepository.cs" />
+    <Compile Include="Utils\AutoMock\IMockingStrategy.cs" />
+    <Compile Include="Utils\AutoMock\MockCreatedEventArgs.cs" />
+    <Compile Include="Utils\AutoMock\StrategyKey.cs" />
+    <Compile Include="Utils\AutoMock\UseAutoMockingContainerAttribute.cs" />
+    <Compile Include="Utils\BaseTestFixture.cs" />
     <Compile Include="Utils\InMemoryEventsStore.cs" />
   </ItemGroup>
   <ItemGroup>
