--- a/src/ShuppanButsu.Tests/packages.config
+++ b/src/ShuppanButsu.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="SharpTestsEx" version="1.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
 </packages>
