--- a/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
+++ b/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Domain\TestClasses\TestClassesBasic.cs" />
     <Compile Include="Infrastructure\Concrete\CastleFasterflectCatalogFixture.cs" />
     <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\FileSystemEventsStoreBasicFunctionalitiesFixture.cs" />
-    <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\RepositoryFixture.cs" />
+    <Compile Include="Infrastructure\Concrete\EventsStore\FileSystemEventStoreFixtures\UnitOfWorkFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AutoMock\AutoMockingContainer.cs" />
     <Compile Include="Utils\AutoMock\AutoMockingDependencyResolver.cs" />
