--- a/src/ShuppanButsu.Tests/packages.config
+++ b/src/ShuppanButsu.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="SharpTestsEx" version="1.1.1" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.81.1" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
 </packages>
