--- a/src/ShuppanButsu/packages.config
+++ b/src/ShuppanButsu/packages.config
@@ -8,4 +8,5 @@
   <package id="log4net" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.81.1" targetFramework="net45" />
 </packages>
