--- a/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
+++ b/src/ShuppanButsu.Tests/ShuppanButsu.Tests.csproj
@@ -61,6 +61,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\Castle.Windsor.3.1.0\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="HibernatingRhinos.Profiler.Appender.v4.0">
+      <HintPath>..\..\libs\NHibernateProfiler.1.0.0.951\lib\Net40\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
+    </Reference>
     <Reference Include="Rhino.Mocks">
       <HintPath>..\..\libs\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
     </Reference>
@@ -108,6 +111,7 @@
     <Compile Include="Utils\AutoMock\UseAutoMockingContainerAttribute.cs" />
     <Compile Include="Utils\BaseTestFixture.cs" />
     <Compile Include="Utils\InMemoryEventsStore.cs" />
+    <Compile Include="Utils\UseNhProfilerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
