--- a/src/ShuppanButsu.Tests/packages.config
+++ b/src/ShuppanButsu.Tests/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="NHibernateProfiler" version="1.0.0.951" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="SharpTestsEx" version="1.1.1" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.81.1" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
 </packages>
