--- a/src/ShuppanButsu/ShuppanButsu.csproj
+++ b/src/ShuppanButsu/ShuppanButsu.csproj
@@ -56,6 +56,9 @@
     <Reference Include="Castle.Core">
       <HintPath>..\..\libs\Castle.Core.3.1.0\lib\net35\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Facilities.Logging">
+      <HintPath>..\..\libs\Castle.LoggingFacility.3.1.0\lib\net40\Castle.Facilities.Logging.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\libs\Castle.Windsor.3.1.0\lib\net40\Castle.Windsor.dll</HintPath>
     </Reference>
@@ -80,6 +83,7 @@
       <HintPath>..\..\libs\NHibernate.3.3.1.4000\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
       <HintPath>..\..\libs\System.Data.SQLite.1.0.81.1\lib\net40\System.Data.SQLite.dll</HintPath>
@@ -96,8 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRootFactory.cs" />
+    <Compile Include="Bootstrap.cs" />
+    <Compile Include="Infrastructure\BaseHandler.cs" />
+    <Compile Include="ShuppanButsuConfiguration.cs" />
     <Compile Include="Domain\AggregateRoot.cs" />
     <Compile Include="Domain\Blog\Comment.cs" />
+    <Compile Include="Domain\Blog\Handlers\PageManagers\HomePageManager.cs" />
     <Compile Include="Domain\Blog\Post.cs" />
     <Compile Include="Domain\Blog\PostEvents\PostCreated.cs" />
     <Compile Include="Domain\IAggregateRoot.cs" />
@@ -120,15 +128,15 @@
     <Compile Include="Utils\JsonNet\CustomContractResolver.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="x64\SQLite.Interop.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="x86\SQLite.Interop.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
