--- a/src/ShuppanButsu/packages.config
+++ b/src/ShuppanButsu/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
+  <package id="Castle.LoggingFacility" version="3.1.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net45" />
   <package id="fasterflect" version="2.1.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
