--- a/src/ShuppanButsu/ShuppanButsu.csproj
+++ b/src/ShuppanButsu/ShuppanButsu.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Infrastructure\Concrete\Repository.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\IdFunctions.cs" />
     <Compile Include="Utils\JsonNet\CustomContractResolver.cs" />
   </ItemGroup>
   <ItemGroup>
