--- a/src/ShuppanButsu.Web/Web.config
+++ b/src/ShuppanButsu.Web/Web.config
@@ -27,8 +27,16 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    <handlers>
-      <add name="MetaWeblogHandler" verb="*" path="MetaWeblog.axd" type="ShuppanButsu.Web.MetaweblogApi.MetaWeblogHandler, ShuppanButsu.Web" />
+    <handlers> 
+      <add name="MetaWeblogHandler" verb="*" path="MetaWeblog.axd" type="ShuppanButsu.Web.MetaweblogApi.MetaWebLogHandlerFactory, ShuppanButsu.Web" />
     </handlers>
   </system.webServer>
-</configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>   
